(add) resumo de vendas, react-router-dom e sidenav

--- a/src/style.css
+++ b/src/style.css
@@ -5,7 +5,7 @@ html {
   --color-4: #f7f8f5;
   --color-5: #fff;
   --gap-s: 0.625rem;
-  --gap: 1.25rem
+  --gap: 1.25rem;
 }
 
 body {
@@ -75,4 +75,56 @@ ul {
   display: grid;
   padding: var(--gap);
   gap: var(--gap);
+  grid-template-columns: 240px auto;
+}
+
+/* sidenav */
+
+.sidenav li {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-s);
+}
+
+.sidenav li span {
+  width: 2rem;
+  height: 2rem;
+  background: var(--color-4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--gap);
+}
+
+.sidenav li a {
+  flex: 1;
+  font-size: 1.125rem;
+  text-decoration: none;
+  color: var(--color-1);
+  padding: var(--gap-s) 0;
+}
+
+.sidenav li:hover span {
+  background: var(--color-3);
+}
+
+/* daterange */
+
+.daterange {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--gap);
+}
+
+/* resumo */
+
+.resumo {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.resumo h2 {
+  font-size: 1.5rem;
+  margin-bottom: var(--gap);
+  color: var(--color-1);
 }
